main/default/objects/Issue__c/fields/Analysis__c.field-meta.xml
<CustomField>
    <fullName>Analysis__c</fullName>
    <label>Analysis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>