main/default/objects/Issue__c/fields/Analysis_Statuses_Details__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Statuses_Details__c</fullName>
    <label>Analysis Statuses Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>