main/default/objects/Issue__c/fields/Average_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Average_Frequency__c</fullName>
    <label>Average Frequency (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>