main/default/objects/Issue__c/fields/Bug_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Bug_Tracker__c</fullName>
    <label>Bug Tracker</label>
    <type>Url</type>
</CustomField>