main/default/objects/Issue__c/fields/DevOps_Center_Metadata_Available__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Center_Metadata_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DevOps Center Metadata Available</label>
    <type>Checkbox</type>
</CustomField>