main/default/objects/Issue__c/fields/Email_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Integration_Status__c</fullName>
    <label>Email Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>