main/default/objects/Issue__c/fields/First_Occurred_On__c.field-meta.xml
<CustomField>
    <fullName>First_Occurred_On__c</fullName>
    <label>First Occurred On</label>
    <type>DateTime</type>
</CustomField>