main/default/objects/Issue__c/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <formula>TEXT(Log__r.Area__c)</formula>
    <label>Functional Area</label>
    <type>Text</type>
</CustomField>