main/default/objects/Issue__c/fields/Impacted_Objects__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Objects__c</fullName>
    <label>Impacted Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>