main/default/objects/Issue__c/fields/Impacted_Objects_Count__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Objects_Count__c</fullName>
    <label>Impacted Objects Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>