main/default/objects/Issue__c/fields/Impacted_Users__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Users__c</fullName>
    <label>Impacted Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>