main/default/objects/Issue__c/fields/Impacted_Users_Count__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Users_Count__c</fullName>
    <label>Impacted Users Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>