main/default/objects/Issue__c/fields/Issue_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Issue_Analysis__c</fullName>
    <label>Issue Analysis</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>