main/default/objects/Issue__c/fields/Jira_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Jira_Integration_Status__c</fullName>
    <label>Jira Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>