main/default/objects/Issue__c/fields/Log_Count__c.field-meta.xml
<CustomField>
    <fullName>Log_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Log Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>