main/default/objects/Issue__c/fields/Override_Priority__c.field-meta.xml
<CustomField>
    <fullName>Override_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Priority</label>
    <type>Checkbox</type>
</CustomField>