main/default/objects/Issue__c/fields/Regressed_On__c.field-meta.xml
<CustomField>
    <fullName>Regressed_On__c</fullName>
    <label>Regressed On</label>
    <type>DateTime</type>
</CustomField>