main/default/objects/Issue__c/fields/Regression__c.field-meta.xml
<CustomField>
    <fullName>Regression__c</fullName>
    <formula>NOT(ISNULL(Regressed_On__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regression</label>
    <type>Checkbox</type>
</CustomField>