main/default/objects/Issue__c/fields/Related_Issue__c.field-meta.xml
<CustomField>
    <fullName>Related_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Issue</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>Issue__c.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Issue__c</referenceTo>
    <relationshipLabel>Related Issues</relationshipLabel>
    <relationshipName>Related_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>