main/default/objects/Issue__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <formula>IF(Average_Frequency__c != 0,
MCEILING(SQRT(Impacted_Objects_Count__c*Impacted_Objects_Count__c + Impacted_Users_Count__c*Impacted_Users_Count__c +  Log_Count__c*Log_Count__c ) / Average_Frequency__c),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>