main/default/objects/Issue__c/fields/Source_Control_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Source_Control_Metadata__c</fullName>
    <label>Source Control Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>