main/default/objects/Issue__c/fields/Teams_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Teams_Integration_Status__c</fullName>
    <label>Teams Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>