main/default/objects/Issue__c/fields/Users_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Users_Impacted__c</fullName>
    <label>Users Impacted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>