main/default/objects/Issue__c/recordTypes/Duplicate.recordType-meta.xml
<RecordType>
    <fullName>Duplicate</fullName>
    <active>true</active>
    <label>Duplicate</label>
</RecordType>