main/default/objects/Issue__c/recordTypes/Issue.recordType-meta.xml
<RecordType>
    <fullName>Issue</fullName>
    <active>true</active>
    <label>Issue</label>
</RecordType>