main/default/objects/Issue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category_Icon__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>First_Occurred_On__c</columns>
    <columns>Organization_Name__c</columns>
    <columns>Summary__c</columns>
    <columns>Log_Count__c</columns>
    <columns>Functional_Area__c</columns>
    <columns>Impacted_Users_Count__c</columns>
    <columns>Impacted_Objects_Count__c</columns>
    <columns>Average_Frequency__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Last_Occurred_On__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>